[tool.poetry]
name = "csct-web-app"
version = "0.1.0"
description = ""
authors = ["Nisuga Jayawardana <nisuga.rockwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pandas = "^2.1.4"
streamlit-aggrid = "^0.3.4.post3"
st-pages = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
